# Anomaly_Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
mixture/: __init__.py  bnp_gmm.py  io_operations.py  main.py  utils.py
models/: posteriors.pkl
plots/: dashboard.py  exploratory_analysis.ipynb
src/: bnp_gmm.py  fraud_detection.ipynb  main.py  plots.ipynb  utils.py
src/mixture/: bnp_gmm.py
src/pio/: __init__.py  operations.py
src/plots/: dashboard.py  training_results.ipynb
